FIX: кнопка в футере; z-index в блоке why

--- a/src/scss/components/_calc.scss
+++ b/src/scss/components/_calc.scss
@@ -419,6 +419,7 @@
 	.calc__btn {
 		width: 189px;
 		height: 52px;
+		padding: 18px 0;
 	}
 }
 
@@ -463,6 +464,7 @@
 	.calc__btn {
 		width: 170px;
 		height: 42px;
+		padding: 10px 0;
 	}
 
 	.calc__item-title,
@@ -511,6 +513,7 @@
 	.calc__btn {
 		width: 132px;
 		height: 34px;
+		padding: 0;
 	}
 
 	.calc__list {
