--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -157,7 +157,7 @@
 
 .footer__btn {
 	width: 100px;
-	height: 62px;
+	min-height: 62px;
 	background: {
 		position: center;
 		repeat: no-repeat;
@@ -344,7 +344,7 @@
 		min-height: 42px;
 		width: 201px;
 		font-size: 10px;
-		padding-top: 24px;
+		padding-top: 7px;
 	}
 
 	.footer__btn {
